# AIEL-Trace

./: README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
mbsd_tool/: main.py
mbsd_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mbsd_tool/config/: settings.py
mbsd_tool/core/: agent.py  auth.py  baseline.py  enumerator.py  logic_analyzer.py  models.py  report.py  scanner.py  utils.py
mbsd_tool/gui/: highlighters.py  icons.py  main_window.py  results_panel.py  scan_controls.py  webview_panel.py
mbsd_tool/resources/: AIEL_mcsc.report.docx
