[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbsd-tool"
version = "0.1.0"
description = "Local GUI vulnerability scanner with AI agent (Ollama)"
authors = [{ name = "MBSD", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7.0",
  "PySide6-Addons>=6.7.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.2",
  "lxml>=5.2.1",
  "pydantic>=2.9.2",
  "jinja2>=3.1.4",
  "reportlab>=4.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-qt>=4.4.0",
  "ruff>=0.6.9",
]

[project.scripts]
mbsd-tool = "mbsd_tool.main:main"

[tool.setuptools]
packages = ["mbsd_tool", "mbsd_tool.gui", "mbsd_tool.core", "mbsd_tool.config"]
